   * updated several unit descriptions
   * standardized on "magi" as plural of "mage"
   * document that Woses receive no traits (#13630)
   * replay suggested save game now translated (#13558)
   * fixed some typos (#13714,#13715,#13716,#13717,#13718)
   * added terrain descriptions to in-game help
   * fixed blank terrain entries in unit help
 * unit balancing and modifications:
   * max level units given After-Max-Level-Advancement (AMLA) of 3 HP/100XP
     added to max HP, with no auto-heal; Necrophage has healing AMLA
     with no bonus HP
   * changed Naga Warrior attack from 5-5 to 7-4
   * decreased Thug hitpoints from 36 to 32
   * decreased Dwarvish Ulfserker  hitpoints from 40 to 34
   * changed Elvish Shaman and Druid to the state before 0.9.3
   * decreased Elvish Shaman cost from 17 to 16 gold
   * removed obsolete units Mounted Captain, Mounted Commander
 * graphics and sound improvements:
   * new or revised images for Dark Sorcerer, Dwarvish Thunderguard, Necromancer
   * new death animations: Elvish Sharpshooter, Elvish Marksman
   * default colour depth changed from 16 bits to 24 bits
   * new tiles for some terrain in the editor terrain list and mini map
 * WML improvements:
   * #define's in user campaigns are now local to each campaign (patch 4138)
   * correctly preprocess files that do not end with a final newline
 * campaigns
   * Heir to the Throne:
     * made campaign easier on "Easy" level
   * Eastern Invasion:
     * revised Approaching Weldyn for quicker gameplay
     * tweaked Undead Crossing
   * The Dark Hordes:
     * cleaned up old id tags; added portraits for Tanar, Nati and Gwiti
 * server now supports redirection based on client version number
 * editor
   * changed the layout of the terrain palette (#11965)
   * relocated and enlarged the buttons (#11967)
   * maps can't be saved with illegal characters (#10704)
   * replaced the buttons under the minimap with a toolbar
 * build process